[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/PlayerSelectionMenu.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MenuBackground" parent="." instance=ExtResource( 2 )]

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="Control" parent="Menu"]
margin_right = 1024.0

[node name="Singleplayer" type="Button" parent="Menu/Buttons"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Singleplayeer"

[node name="Multiplayer" type="Button" parent="Menu/Buttons"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
text = "Multiplayer"

[node name="Options" type="Button" parent="Menu/Buttons"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 68.0
text = "Options"

[node name="Quit" type="Button" parent="Menu/Buttons"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 92.0
text = "Quit"

[node name="PlayerSelectionMenu" parent="Menu" instance=ExtResource( 3 )]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 4.0
[connection signal="pressed" from="Menu/Buttons/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="Menu/Buttons/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="Menu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/Buttons/Quit" to="." method="_on_Quit_pressed"]
